# supervisor_modbus

./: .gitignore  api.http  api.py  build_exe.py  docker-compose.yml  main.py  pyproject.toml  readme.MD  run.py  test.py
config/: settings.toml
docs/: diagram.excalidraw  flow.excalidraw
src/api/: routes.py
src/config/: settings.py
src/core/: CW.py  config.py  logger.py
src/infrastructure/: CW.py
src/infrastructure/database/: connection.py  repositories.py
src/services/: workers.py
src/utils/: event_manager.py
